# idris2-llvm

./: .build.yml  .gitignore  CMakeLists.txt  Makefile  README.md  rapid-lite.ipkg  runtests.sh
.builds/: cmake.yml  debian.yml  freebsd.yml
cmake/Modules/: FindIdris2.cmake
docs/: Makefile
docs/source/: conf.py  index.rst  object.rst
llvm/: .gitignore  CMakeLists.txt  lit.cfg.in
llvm/Passes/: LowerRapidIntrinsics.cpp
llvm/test/: lower_unboxing.ll
rts/: CMakeLists.txt  Makefile  builtin.c  entry.c  gc.c  gc.h  memory.c  memory.h  object.c  object.h  rts.c  rts.h
rts/test/: test_main.c
src/: Rapid.idr
src/Compiler/: GenLLVMIR.idr  PrepareCode.idr  VMCodeSexp.idr
src/Compiler/Codegen/: LLVM.idr  Rapid.idr  VmcodeSexp.idr
src/Compiler/LLVM/: IR.idr  Instruction.idr
src/Compiler/LLVM/Rapid/: Builtin.idr  Closure.idr  Foreign.idr  Integer.idr  Object.idr  String.idr
src/Control/: Codegen.idr
src/Data/: Sexp.idr  Utils.idr
src/Data/Sexp/: Parser.idr
src/Rapid/: Common.idr  Driver.idr  Lite.idr  Main.idr
support/rapid/: support.ll
tests/chez/chez004/: Buffer.idr
tests/chez/chez009/: expected  uni.idr
tests/chez/chez012/: array.idr
tests/chez/rapid001/: Strings.idr  expected
tests/chez/rapid004/: OverridePrelude.idr
tests/chez/rapid008/: Integer.idr  expected
tests/chez/rapid013/: BigObjects.idr  expected
tests/chez/rapid014/: IntCase.idr  expected
tests/chez/reg001/: numbers.idr
